fixes left align problem of front page

--- a/static-html/stylesheets/less/main.less
+++ b/static-html/stylesheets/less/main.less
@@ -5,7 +5,7 @@
 @indivTimeItemWidth:    380px;
 
 @fontGray:          #565656;
-@accentColor:       #111;
+@accentColor:       #1c7681;
 @highlightColor:    rgba(181, 197, 200, .41);
 @inverseHeaderText: #cccccc;
 @footerColor:       #323232;
@@ -150,7 +150,7 @@ nav {
                 vertical-align: middle;
                 padding: 0 5px;
                 padding-top: 10px;
-                padding-bottom:23px;
+                padding-bottom:10px;
             }
         }
     }
@@ -176,6 +176,7 @@ nav:after { .clear-floats; }
         ul {
             a, a:visited {
                 color: @footerTextColor;
+                padding-bottom:23px;
             }
             a:hover {
                 text-decoration: none;
@@ -186,7 +187,7 @@ nav:after { .clear-floats; }
     }
 }
 
-div#content {
+#content {
     width: 100%;
     position:relative;
     padding: 7px 0;
